# eda-and-visualization

EV-vechicle/: .gitignore
EV-vechicle/data/: README.md
EV-vechicle/data/cleaned/: ev_data.csv
EV-vechicle/notebooks/: Untitled.ipynb  eda.ipynb
EV-vechicle/scripts/: cleaning.py  preprocessig.py  sample.py  visualizing.py
IT-salary/: README.md  pyproject.toml  requirements.txt
IT-salary/data/processed/: initial_cleaned_IT_survey(v.0.2).csv  initial_cleaned_IT_survey.csv  tranformed_IT_survey(v.0.1).csv
IT-salary/data/raw/: README.md
IT-salary/notebooks/: Untitled.ipynb  data_cleaning.ipynb  eda.ipynb  initial_cleaning.ipynb  transform_data.ipynb
