[tool.poetry]
name = "IT-Profession-Salary-Analysis"
version = "0.1.0"
description = ""
authors = ["Adnan <adnanmuhammedadnancp@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.1.2"
pandas = "^2.2.3"
scipy = "^1.14.1"
statsmodels = "^0.14.4"
camel-converter = "^4.0.1"
scikit-learn = "^1.5.2"
wordcloud = "^1.9.3"
seaborn = "^0.13.2"
python-dotenv = "^1.0.1"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.1.1"
notebook = "^7.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
